--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=ecommerce-backend
+
+server.port=8092
+
+# config database ..
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=4516*
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_ecommerce_spring
+
+# config hibernate ...
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# config openapi swagger ...
+springdoc.swagger-ui.path=/swagger-ui-custom.html
