Fix the structure of all project and finish client entity with validations and exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ecommerce-backend
-
+spring.jackson.time-zone=America/Havana
 server.port=8092
 
 # config database ..
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # config openapi swagger ...
 springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+
