--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # config openapi swagger ...
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
+# image server config ...
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=5MB
 
