setting the "server.servlet.context-path" with the default route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ecommerce-backend
 spring.jackson.time-zone=America/Havana
 server.port=8092
+server.servlet.context-path=/api/v1/
 
 # config database ..
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
