--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -17,6 +17,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # config openapi swagger ...
 springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.version=openapi_3_1
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+springdoc.swagger-ui.syntax-highlight.theme=agate
 
 # image server config ...
 spring.servlet.multipart.max-request-size=10MB
